--- a/package.json
+++ b/package.json
@@ -23,5 +23,21 @@
     "webpack": "^5.84.1",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.9.0"
+  },
+  "dependencies": {
+    "@actual-app/api": "^6.0.1",
+    "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
+    "constants-browserify": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5"
+  },
+  "overrides": {
+    "@actual-app/api": {
+      "better-sqlite3": "git://github.com/anh-chu/better-sqlite3.git#1"
+    }
   }
 }
