--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,30 +4,24 @@
   "version": "0.1.0",
   "description": "My Chrome Extension",
   "icons": {
-    "16": "icons/icon_16.png",
-    "32": "icons/icon_32.png",
-    "48": "icons/icon_48.png",
-    "128": "icons/icon_128.png"
+    "92": "favicon.png"
+  },
+  "action": {
+    "default_icon": "favicon.png"
+  },
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": false
   },
   "background": {
     "service_worker": "background.js"
   },
-  "action": {
-    "default_title": "Actual Tcb Sync",
-    "default_popup": "popup.html"
-  },
-  "permissions": [
-    "storage"
+  "permissions": ["activeTab", "scripting", "storage"],
+  "host_permissions": [
+    "https://*.techcombank.com.vn/*",
+    "https://actual.anhdchu.com/*"
   ],
-  "content_scripts": [
-    {
-      "matches": [
-        "<all_urls>"
-      ],
-      "run_at": "document_idle",
-      "js": [
-        "contentScript.js"
-      ]
-    }
-  ]
+  "content_security_policy": {
+    "extension_pages": "default-src 'self'; connect-src https://* data: blob: filesystem:;"
+  }
 }
