--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,9 @@
 {
-  "singleQuote": true,
   "trailingComma": "es5",
+  "tabWidth": 4,
+  "semi": true,
+  "singleQuote": true,
+  "printWidth": 120,
   "bracketSpacing": true,
-  "bracketSameLine": false,
-  "arrowParens": "always",
-  "htmlWhitespaceSensitivity": "css",
-  "insertPragma": false,
-  "semi": true
+  "jsxBracketSameLine": true
 }
