--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "rootDir": "src",
     "target": "es6",
+    "resolveJsonModule": true,
     "module": "commonjs",
     "esModuleInterop": true,
     "strict": true
