--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,22 @@
 {
-  "manifest_version": 3,
-  "name": "Actual Tcb Sync",
-  "version": "0.1.0",
-  "description": "My Chrome Extension",
-  "icons": {
-    "92": "favicon.png"
-  },
-  "action": {
-    "default_icon": "favicon.png",
-    "default_popup": "popup.html"
-  },
-  "options_ui": {
-    "page": "options.html",
-    "open_in_tab": false
-  },
-  "background": {
-    "service_worker": "background.js"
-  },
-  "permissions": ["activeTab", "scripting", "storage", "downloads"],
-  "host_permissions": [
-    "https://*.techcombank.com.vn/*",
-    "*://localhost:*/*"
-  ]
+    "manifest_version": 3,
+    "name": "Actual Tcb Sync",
+    "version": "0.1.0",
+    "description": "My Chrome Extension",
+    "icons": {
+        "92": "favicon.png"
+    },
+    "action": {
+        "default_icon": "favicon.png",
+        "default_popup": "popup.html"
+    },
+    "options_ui": {
+        "page": "options.html",
+        "open_in_tab": false
+    },
+    "background": {
+        "service_worker": "background.js"
+    },
+    "permissions": ["activeTab", "scripting", "storage", "downloads"],
+    "host_permissions": ["https://*.techcombank.com.vn/*", "*://localhost:*/*", "http://data.fixer.io/*"]
 }
