--- a/package.json
+++ b/package.json
@@ -1,43 +1,51 @@
 {
-  "name": "actual-tcb-sync",
-  "version": "0.1.0",
-  "description": "My Chrome Extension",
-  "private": true,
-  "scripts": {
-    "watch": "webpack --mode=development --watch --config config/webpack.config.js",
-    "build": "webpack --mode=production --config config/webpack.config.js",
-    "pack": "node pack.js",
-    "repack": "npm run build && npm run pack",
-    "format": "prettier --write --ignore-unknown \"{config,public,src}/**/*.{html,css,js,ts,json}\""
-  },
-  "devDependencies": {
-    "@types/chrome": "^0.0.181",
-    "@types/json-query": "^2.2.3",
-    "@types/json2csv__plainjs": "^6.1.0",
-    "adm-zip": "^0.5.10",
-    "copy-webpack-plugin": "^10.2.4",
-    "css-loader": "^6.7.4",
-    "file-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^2.7.6",
-    "prettier": "^2.8.8",
-    "ts-loader": "^9.2.8",
-    "typescript": "^4.6.3",
-    "webpack": "^5.84.1",
-    "webpack-cli": "^4.10.0",
-    "webpack-merge": "^5.9.0"
-  },
-  "dependencies": {
-    "@json2csv/plainjs": "^6.1.3",
-    "assert": "^2.0.0",
-    "browserify-zlib": "^0.2.0",
-    "buffer": "^6.0.3",
-    "constants-browserify": "^1.0.0",
-    "crypto-browserify": "^3.12.0",
-    "json-query": "^2.2.2",
-    "jszip": "^3.10.1",
-    "path-browserify": "^1.0.1",
-    "process": "^0.11.10",
-    "stream-browserify": "^3.0.0",
-    "util": "^0.12.5"
-  }
+    "name": "actual-tcb-sync",
+    "version": "0.1.0",
+    "description": "My Chrome Extension",
+    "private": true,
+    "scripts": {
+        "watch": "webpack --mode=development --watch --config config/webpack.config.js",
+        "build": "webpack --mode=production --config config/webpack.config.js",
+        "pack": "node pack.js",
+        "repack": "npm run build && npm run pack",
+        "format": "prettier --write --ignore-unknown \"{config,public,src}/**/*.{html,css,js,ts,json}\"",
+        "prepare": "husky install"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "pretty-quick --staged"
+        }
+    },
+    "devDependencies": {
+        "@types/chrome": "^0.0.181",
+        "@types/json-query": "^2.2.3",
+        "@types/json2csv__plainjs": "^6.1.0",
+        "adm-zip": "^0.5.10",
+        "copy-webpack-plugin": "^10.2.4",
+        "css-loader": "^6.7.4",
+        "file-loader": "^6.2.0",
+        "husky": "^8.0.0",
+        "mini-css-extract-plugin": "^2.7.6",
+        "prettier": "^2.8.8",
+        "pretty-quick": "^3.1.3",
+        "ts-loader": "^9.2.8",
+        "typescript": "^4.6.3",
+        "webpack": "^5.84.1",
+        "webpack-cli": "^4.10.0",
+        "webpack-merge": "^5.9.0"
+    },
+    "dependencies": {
+        "@json2csv/plainjs": "^6.1.3",
+        "assert": "^2.0.0",
+        "browserify-zlib": "^0.2.0",
+        "buffer": "^6.0.3",
+        "constants-browserify": "^1.0.0",
+        "crypto-browserify": "^3.12.0",
+        "json-query": "^2.2.2",
+        "jszip": "^3.10.1",
+        "path-browserify": "^1.0.1",
+        "process": "^0.11.10",
+        "stream-browserify": "^3.0.0",
+        "util": "^0.12.5"
+    }
 }
