--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: NodeJS build
+name: NodeJS build and create release
 
 on:
   push:
@@ -32,3 +32,12 @@ jobs:
       with:
         name: dist-without-markdown
         path: build
+    - name: Create a Release
+      uses: elgohr/Github-Release-Action@v5
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        title: Actual TCB Sync
+        workdir: build
+        tag: latest
+        
